// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SliderKeyboardInput Snapshots Name 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="slider-keyboard"
      mask={null}
      max={100}
      min={0}
      name="slider-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={NaN}
          className="sc-bdfBwQ fHavKc sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz bJfODj"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": NaN,
              "value": NaN,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots No props 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={100}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots all 1`] = `
<div
  className="sc-bqyKva hYthuH"
  onBlur={[Function]}
  value={100}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <label
      className="sc-iBPRYJ hrNrxW sc-iqHYGH gHOQQy"
      htmlFor="slider-keyboard"
    >
      Label
    </label>
    <input
      className="sc-dQppl jYXCnb"
      id="slider-keyboard"
      mask={null}
      max={1000}
      min={0}
      name="slider-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={1000}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots label 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <label
      className="sc-iBPRYJ hrNrxW sc-iqHYGH gHOQQy"
      htmlFor="sliderKeyboard-keyboard"
    >
      Label
    </label>
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={100}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots max 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={1000}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={1000}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots min 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={100}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots onBlur 1`] = `
<div
  className="sc-bqyKva hYthuH"
  onBlur={[Function]}
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={100}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots onChange 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={100}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots showLabel 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={100}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots step 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={0}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={100}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SliderKeyboardInput Snapshots value 1`] = `
<div
  className="sc-bqyKva hYthuH"
  value={100}
>
  <div
    className="sc-crrsfI leevFK sc-kstrdz hZYYUJ"
  >
    <input
      className="sc-dQppl jYXCnb"
      id="sliderKeyboard-keyboard"
      mask={null}
      max={100}
      min={0}
      name="sliderKeyboard-keyboard"
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="sc-dlfnbm jQQXla"
  >
    <div
      className="sc-hKgILt cNgtla"
      style={Object {}}
    >
      <div
        className="sc-eCssSg fXBLJQ"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      />
      <div
        className="slider-handles"
      >
        <button
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
          type="button"
        />
      </div>
      <div
        className="sc-gKsewC eoWRga"
      >
        <div
          className="sc-gsTCUz XesgK"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          target={
            Object {
              "id": "$$-0",
              "percent": 0,
              "value": 0,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
